[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Character/GirlAnim.png" type="Texture" id=1]
[ext_resource path="res://Assets/Character/BoyAnim3.png" type="Texture" id=2]
[ext_resource path="res://CharacterSelection.gd" type="Script" id=3]
[ext_resource path="res://Assets/Buttons/PressedSelectbutton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/HoverSelectbutton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/HoverNext.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/PressedNextleft.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/Nextleft.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/PressedNext.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/HoverNextleft.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/Selectbutton.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/Nextright.png" type="Texture" id=12]
[ext_resource path="res://Fonts/VT323-Regular.ttf" type="DynamicFontData" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 65
font_data = ExtResource( 13 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 333, 375 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 333, 0, 333, 375 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 333, 375 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 333, 0, 333, 375 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Boy",
"speed": 1.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Girl",
"speed": 1.0
} ]

[node name="SelectPlayer" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 80.0
margin_right = 688.0
margin_bottom = 217.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Choose your character"
align = 1
valign = 1

[node name="PlayerSelect" type="AnimatedSprite" parent="."]
position = Vector2( 360, 640 )
scale = Vector2( 2.65229, 2.55285 )
frames = SubResource( 6 )
animation = "Girl"
frame = 1
playing = true

[node name="Right" type="TextureButton" parent="."]
margin_left = 576.0
margin_top = 608.0
margin_right = 826.0
margin_bottom = 876.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 6 )

[node name="Left" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 616.0
margin_right = 272.0
margin_bottom = 872.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 10 )

[node name="Select" type="TextureButton" parent="."]
margin_left = 248.0
margin_top = 1080.0
margin_right = 504.0
margin_bottom = 1336.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
